# clitw

./: .gitignore  README.md  README.rst  pyproject.toml
src/: clitw.py
